Move khr test to configure
Change-Id: Ic213555705f12a46283c62410bf9a477f03c05c0
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/configure.json
+++ b/src/core/configure.json
@@ -294,8 +294,14 @@
         },
         "webengine-khr": {
             "label": "khr",
-            "test": "khr",
-            "type": "compile"
+            "type": "compile",
+            "test": {
+                "include": "KHR/khrplatform.h",
+                "qmake" : [
+                    "!isEmpty(QMAKE_INCDIR_EGL): INCLUDEPATH += $$QMAKE_INCDIR_EGL",
+                    "!isEmpty(QMAKE_INCDIR_OPENGL): INCLUDEPATH += $$QMAKE_INCDIR_OPENGL"
+                ]
+            }
         },
         "webengine-winversion": {
             "label": "winversion",
