Move winversion test to configure
Change-Id: I5e0544415298b0e6b10e55f91d93d05eef81ccc4
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/configure.json
+++ b/src/core/configure.json
@@ -318,8 +318,14 @@
         },
         "webengine-winversion": {
             "label": "winversion",
-            "test": "winversion",
-            "type": "compile"
+            "type": "compile",
+            "test": {
+                 "head" : [
+                    "#if !defined(__clang__) && _MSC_FULL_VER < 191426428",
+                    "#error unsupported Visual Studio version",
+                    "#endif"
+                 ]
+            }
         },
         "webengine-protoc": {
             "label": "protoc",
