--- a/src/core/qtwebengine_sources.gni
+++ b/src/core/qtwebengine_sources.gni
@@ -46,6 +46,7 @@ source_set("qtwebengine_sources") {
   ]
 
   deps = [
+    "//build:branding_buildflags",
     "//chrome/common:buildflags",
     "//components/nacl/common:buildflags",
     "//extensions/buildflags:buildflags",
@@ -116,9 +117,10 @@ source_set("qtwebengine_sources") {
       "//chrome/common/extensions/permissions/chrome_permission_message_rules.h",
     ]
   } else {
+    deps += [
+      "//extensions/common:common_constants",
+    ]
     sources += [
-      "//extensions/common/constants.cc",
-      "//extensions/common/constants.h",
       "//extensions/common/url_pattern.cc",
       "//extensions/common/url_pattern.h",
     ]
