Add visual studio check as build requirement
Task-number: QTBUG-75840
Task-number: QTBUG-76606
Change-Id: Ic1d6125a1a6685a74dbad2f6c3b16efce120e180
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -370,9 +370,10 @@
                          && features.webengine-gperf
                          && features.webengine-bison
                          && features.webengine-flex
-                         && (!features.xcb || features.webengine-ozone-x11)
                          && tests.webengine-platform
-                         && tests.webengine-architecture",
+                         && tests.webengine-architecture
+                         && (!features.xcb || features.webengine-ozone-x11)
+                         && (!config.win32 || features.webengine-winversion)",
             "output": [ "privateFeature" ]
         },
         "webengine-python2": {
@@ -655,6 +656,11 @@
             "type": "warning",
             "condition": "config.linux && !features.webengine-ozone-x11 && features.xcb",
             "message": "Could not find all necessary libraries for qpa-xcb support."
+        },
+        {
+            "type": "warning",
+            "condition": "config.win32 && !features.webengine-winversion",
+            "message": "Needs Visual Studio 2017 or higher."
         },
         {
             "type": "warning",
