Add platform and architecture checks to configure for qtpdf
For now follow webengniecore requirements.

Change-Id: I7260b593e6489f51970b1a4c9dc6cd92067a085c
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>

--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -413,7 +413,14 @@
                             && features.webengine-python2
                             && features.webengine-gperf
                             && features.webengine-bison
-                            && features.webengine-flex",
+                            && features.webengine-flex
+                            && features.webengine-submodule
+                            && features.webengine-nowhitespace
+                            && features.webengine-arch-support
+                            && !features.webengine-no-platform-support
+                            && !config.static
+                            && (!config.linux || features.pkg-config)
+                            && (!config.win32 || features.webengine-winversion)",
              "output": [ "privateFeature" ]
         },
         "webengine-developer-build": {
