FIXUP: Fix platforms check for topLevel build
In case of a top level build configure.pri is not able
to load platform.prf. Move platform.prf to platfrom.pri
and use include instead. Fix not loaded qconfig.pri
with gcc versions. Make sure there is no function name
collision.

Change-Id: I2c9994197dc56371fd7ef215ab350aebb89ff701
Reviewed-by: Jörg Bornemann <joerg.bornemann@qt.io>
Reviewed-by: Michael Brüning <michael.bruning@qt.io>

--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -685,12 +685,12 @@
         {
             "type": "skipBuildWarning",
             "condition": "tests.webengine-platform",
-            "message": "isPlatformSupported"
+            "message": "qtwebengine_isPlatformSupported"
         },
         {
             "type": "skipBuildWarning",
             "condition": "tests.webengine-architecture",
-            "message": "isArchSupported"
+            "message": "qtwebengine_isArchSupported"
         }
     ],
     "summary": [
