--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -359,12 +359,19 @@
         "webengine-architecture": {
             "label": "architecture supported",
             "type": "detectArch"
+        },
+        "webengine-submodule" : {
+            "label": "submodule initialized",
+            "type": "detectSubmodule"
+        },
+        "webengine-nowhitespace" : {
+            "label": "build path without whitespace",
+            "type": "detectNoWhitespace"
         }
     },
     "features": {
-        "build-qtwebengine-core": {
+        "webengine-core-support": {
             "label": "Support Qt WebEngine Core",
-            "purpose": "Provides WebEngine Core support.",
             "condition": "module.gui
                          && features.webengine-python2
                          && features.webengine-gperf
@@ -372,10 +379,23 @@
                          && features.webengine-flex
                          && tests.webengine-platform
                          && tests.webengine-architecture
+                         && tests.webengine-submodule
+                         && tests.webengine-nowhitespace
+                         && !config.static
                          && (!config.linux || features.pkg-config)
                          && (!features.xcb || features.webengine-ozone-x11)
                          && (!config.win32 || features.webengine-winversion)",
             "output": [ "privateFeature" ]
+        },
+        "build-qtwebengine-core": {
+            "label": "Build Qt WebEngine Core",
+            "purpose": "Provides WebEngine Core support.",
+            "output": [ "privateFeature" ]
+        },
+        "build-qtpdf": {
+             "label": "Support Qt PDF rendering module",
+             "purpose": "Enables building the Qt PDF rendering module.",
+             "output": [ "privateFeature" ]
         },
         "webengine-developer-build": {
             "label": "Developer build",
@@ -631,66 +651,43 @@
             "label": "64bit compiler",
             "condition": "config.win32 && tests.webengine-win-compiler64",
             "output": [ "privateFeature" ]
+        },
+        "webengine-submodule": {
+            "label": "submodule",
+            "condtion": "tests.webengine-submodule",
+            "output": [ "privateFeature" ]
+        },
+        "webengine-nowhitespace": {
+            "label": "nowhitespace",
+            "condition" : "tests.webengine-nowhitespace",
+            "output": [ "privateFeature" ]
         }
     },
     "report": [
         {
-            "type": "warning",
-            "condition": "!module.gui",
-            "message": "QtWebEngine requires QtGui."
-        },
-        {
-            "type": "warning",
-            "condition": "!features.webengine-python2",
-            "message": "Python version 2 (2.7.5 or later) is required to build QtWebEngine."
-        },
-        {
-            "type": "warning",
-            "condition": "!features.webengine-gperf",
-            "message": "gperf is required to build QtWebEngine."
-        },
-        {
-            "type": "warning",
-            "condition": "!features.webengine-bison",
-            "message": "bison is required to build QtWebEngine."
-        },
-        {
-            "type": "warning",
-            "condition": "!features.webengine-flex",
-            "message": "flex is required to build QtWebEngine."
-        },
-        {
-            "type": "warning",
-            "condition": "config.linux && !features.pkg-config",
-            "message": "Could not find pkg-config."
-        },
-        {
-            "type": "warning",
-            "condition": "config.linux
-                          && features.pkg-config
-                          && features.xcb
-                          && !features.webengine-ozone-x11",
-            "message": "Could not find all necessary libraries for qpa-xcb support."
-        },
-        {
-            "type": "warning",
-            "condition": "config.win32 && !features.webengine-winversion",
-            "message": "Needs Visual Studio 2017 or higher."
-        },
-        {
-            "type": "warning",
-            "condition": "config.win32 && !features.webengine-win-compiler64",
-            "message": "64-bit cross-building or native toolchain is required to build QtWebEngine."
-        },
-        {
             "type": "skipBuildWarning",
-            "condition": "tests.webengine-platform",
-            "message": "qtwebengine_isPlatformSupported"
+            "condition": "!features.webengine-core-support && (features.build-qtwebengine-core || features.build-qtpdf)",
+            "message": "qtwebengine_checkError"
         },
         {
-            "type": "skipBuildWarning",
-            "condition": "tests.webengine-architecture",
-            "message": "qtwebengine_isArchSupported"
+            "type": "note",
+            "condition": "features.webengine-core-support && !features.build-qtwebengine-core",
+            "message": "QtWebEngine build is disabled by user."
+        },
+        {
+            "type": "note",
+            "condition": "features.webengine-core-support && !features.build-qtpdf",
+            "message": "QtPdf build is disabled by user."
+        },
+        {
+            "type": "warning",
+            "condition": "!features.webengine-core-support && features.build-qtwebengine-core",
+            "message": "QtWebEngine will not be built."
+        },
+        {
+            "type": "warning",
+            "condition": "!features.webengine-core-support && features.build-qtpdf",
+            "message": "QtPdf will not be built."
         }
     ],
     "summary": [
