FIXUP: Fix top level build again
When we are doing top level build QTWEBENGINE_ROOT/QTWEBENGINE_ROOT_OUT
is not present at configure step, therefore add two ways of calling
checkError, one for configure time and one for make call.

Fix typo in submodule's condition. Add a poor man's workaround
for this test.

Change-Id: Ie95ab9ffe262a45c7e1ea49e4795d142b7df716a
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -377,10 +377,10 @@
                          && features.webengine-gperf
                          && features.webengine-bison
                          && features.webengine-flex
+                         && features.webengine-submodule
+                         && features.webengine-nowhitespace
                          && tests.webengine-platform
                          && tests.webengine-architecture
-                         && tests.webengine-submodule
-                         && tests.webengine-nowhitespace
                          && !config.static
                          && (!config.linux || features.pkg-config)
                          && (!features.xcb || features.webengine-ozone-x11)
@@ -654,7 +654,7 @@
         },
         "webengine-submodule": {
             "label": "submodule",
-            "condtion": "tests.webengine-submodule",
+            "condition": "tests.webengine-submodule",
             "output": [ "privateFeature" ]
         },
         "webengine-nowhitespace": {
@@ -667,7 +667,7 @@
         {
             "type": "skipBuildWarning",
             "condition": "!features.webengine-core-support && (features.build-qtwebengine-core || features.build-qtpdf)",
-            "message": "qtwebengine_checkError"
+            "message": "qtwebengine_confCheckError"
         },
         {
             "type": "note",
