Clean up platform tests
Make it a private feature so test is not run twice.
The better solution would be to split the platform
test into separate tests in configure, but it looks like
a lot of boring typing and would result in bunch on private
features. Instead run test only on configure step
and in case of fail just export the error, so it is
reported during configure and make calls.

Change-Id: Ice1188631a53fe739569de3e303533b18342941a
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -352,9 +352,10 @@
             "label": "64bit compiler",
             "type": "isWindowsHostCompiler64"
         },
-        "webengine-platform": {
+        "webengine-platform-support": {
             "label": "platform supported",
-            "type": "detectPlatform"
+            "type": "detectPlatform",
+            "log": "platformSupport"
         },
         "webengine-arch-support": {
             "label": "architecture supported",
@@ -380,7 +381,7 @@
                          && features.webengine-submodule
                          && features.webengine-nowhitespace
                          && features.webengine-arch-support
-                         && tests.webengine-platform
+                         && !features.webengine-no-platform-support
                          && !config.static
                          && (!config.linux || features.pkg-config)
                          && (!features.xcb || features.webengine-ozone-x11)
@@ -666,6 +667,14 @@
             "label": "architecture",
             "condition" : "tests.webengine-arch-support",
             "output": [ "privateFeature" ]
+        },
+        "webengine-no-platform-support": {
+            "label": "platform",
+            "condition" : "!tests.webengine-platform-support",
+            "output": [
+                "privateFeature",
+                { "type": "varAssign", "name": "PLATFORM_ERROR", "value": "tests.webengine-platform-support.platformSupport" }
+            ]
         }
     },
     "report": [
