Enable Windows sandbox
Enable sandboxing on Windows. Enable heterogeneous sandbox symbol
resolution and statically link the sandboxing code into the helper
process. This means we have two copies of the sandboxing code,
one statically linked in the executable and one in the shared
library. Since they are not exported they don't conflict, but
we need to take to initialize the right version in the helper process
binary, and pass its sandbox interface to shared library using it.

For sandbox debug output, we also need to initialize the second copy
of the commandlineparser and logging system.

Fixes: QTBUG-51170
Change-Id: I8f503c8d6b40674465f32772ef906817dad2b449
Reviewed-by: Kirill Burtsev <kirill.burtsev@qt.io>

--- a/src/core/qtwebengine_sources.gni
+++ b/src/core/qtwebengine_sources.gni
@@ -179,3 +179,9 @@ source_set("qtwebengine_sources") {
   }
 }
 
+if (is_win) {
+  shared_library("qtwebengine_sandbox_win") {
+    create_pri_file = true
+    public_deps = [ "//sandbox/win:sandbox" ]
+  }
+}
