--- a/src/core/qtwebengine.gni
+++ b/src/core/qtwebengine.gni
@@ -20,6 +20,7 @@ deps = [
   "//components/cdm/renderer",
   "//components/error_page/common",
   "//components/keyed_service/content",
+  "//components/navigation_interception",
   "//components/network_hints/browser",
   "//components/network_hints/common",
   "//components/network_hints/renderer",
