Allow specifying ninja command to use with $NINJA
This was previously supported with $NINJA_PATH until 15a38cb0, when
the system-ninja test was added. However, since $NINJA seems to be the
more common environment variable for this purpose, use that instead.

This allows the builder to use a specific ninja version, or an
alternative implementation like samurai[0].

[0] https://github.com/michaelforney/samurai

Change-Id: Ib3206ce5032be1ccf2a98b45783e12afebb4949e
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -316,7 +316,8 @@
         },
         "webengine-ninja": {
             "label": "system ninja",
-            "type": "detectNinja"
+            "type": "detectNinja",
+            "log": "path"
         },
         "webengine-python2": {
             "label": "python2",
@@ -430,7 +431,10 @@
         "webengine-system-ninja": {
             "label": "Use System Ninja",
             "condition": "tests.webengine-ninja",
-            "output": [ "privateFeature" ]
+            "output": [
+                "privateFeature",
+                { "type": "varAssign", "name": "QMAKE_NINJA", "value": "tests.webengine-ninja.path" }
+            ]
         },
         "webengine-system-fontconfig": {
             "label": "fontconfig",
