Fix the build with -no-gui
Task-number: QTBUG-74602
Change-Id: I8ba358e03472e58c40363fede56e87dfd665ae83
Reviewed-by: Tony Sarajärvi <tony.sarajarvi@qt.io>

--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -5,6 +5,7 @@
         "gui-private",
         "printsupport"
     ],
+    "condition": "module.gui",
     "commandline": {
         "options": {
             "build-qtwebengine-core": "boolean",
