--- a/src/core/configure.json
+++ b/src/core/configure.json
@@ -6,7 +6,7 @@
         "gui-private",
         "printsupport"
     ],
-    "condition": "features.build-qtwebengine-core && features.webengine-core-support",
+    "condition": "module.gui && features.build-qtwebengine-core && features.webengine-core-support",
     "testDir": "../../config.tests",
     "commandline": {
         "options": {
