Factor out qtpdf-support out of core-support
Make static builds available for ios.

Task-number: QTBUG-77931
Change-Id: Id122190f51f03f782fd0ee1c897e5b4ff891f703
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>

--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -389,6 +389,22 @@
                          && (!config.win32 || features.webengine-winversion)",
             "output": [ "privateFeature" ]
         },
+        "webengine-qtpdf-support": {
+            "label": "Support Qt Pdf",
+            "condition": "module.gui
+                         && features.webengine-python2
+                         && features.webengine-gperf
+                         && features.webengine-bison
+                         && features.webengine-flex
+                         && features.webengine-submodule
+                         && features.webengine-nowhitespace
+                         && features.webengine-arch-support
+                         && !features.webengine-no-platform-support
+                         && (!config.static || config.ios)
+                         && (!config.linux || features.pkg-config)
+                         && (!config.win32 || features.webengine-winversion)",
+            "output": [ "privateFeature" ]
+        },
         "build-qtwebengine-core": {
             "label": "Build Qt WebEngine Core",
             "purpose": "Provides WebEngine Core support.",
@@ -682,7 +698,8 @@
     "report": [
         {
             "type": "skipBuildWarning",
-            "condition": "!features.webengine-core-support && (features.build-qtwebengine-core || features.build-qtpdf)",
+            "condition": "(!features.webengine-core-support && features.build-qtwebengine-core) ||
+                          (!features.webengine-qtpdf-support && features.build-qtpdf)",
             "message": "qtwebengine_confCheckError"
         },
         {
@@ -692,7 +709,7 @@
         },
         {
             "type": "note",
-            "condition": "features.webengine-core-support && !features.build-qtpdf",
+            "condition": "features.webengine-qtpdf-support && !features.build-qtpdf",
             "message": "QtPdf build is disabled by user."
         },
         {
@@ -702,7 +719,7 @@
         },
         {
             "type": "warning",
-            "condition": "!features.webengine-core-support && features.build-qtpdf",
+            "condition": "!features.webengine-qtpdf-support && features.build-qtpdf",
             "message": "QtPdf will not be built."
         }
     ],
@@ -719,7 +736,7 @@
                 "webengine-developer-build",
                 {
                     "section": "QtWebEngine required system libraries",
-                    "condition": "config.unix && !config.macos",
+                    "condition": "config.unix && !config.macos && !config.ios",
                     "entries": [
                         "webengine-system-fontconfig",
                         "webengine-system-dbus",
