--- a/src/pdfquick/CMakeLists.txt
+++ b/src/pdfquick/CMakeLists.txt
@@ -20,6 +20,7 @@ qt_internal_add_qml_module(PdfQuick
         qquickpdfdocument.cpp qquickpdfdocument_p.h
         qquickpdflinkmodel.cpp qquickpdflinkmodel_p.h
         qquickpdfnavigationstack.cpp qquickpdfnavigationstack_p.h
+        qquickpdfpageimage.cpp qquickpdfpageimage_p.h
         qquickpdfsearchmodel.cpp qquickpdfsearchmodel_p.h
         qquickpdfselection.cpp qquickpdfselection_p.h
         qtpdfquickglobal_p.h
