Add fat lib build support on ios
Fat builds disable NEON for arm, therefore when
doing release setting CONFIG-=simulator is preferable.

Task-number: QTBUG-77931
Change-Id: I59c99f2a38dbc83d15940a691c17277175b5b935
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>

--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -721,6 +721,11 @@
             "type": "warning",
             "condition": "!features.webengine-qtpdf-support && features.build-qtpdf",
             "message": "QtPdf will not be built."
+        },
+        {
+            "type": "warning",
+            "condition": "config.ios && config.simulator && config.device && features.build-qtpdf",
+            "message": "Building fat libray with device and simulator architectures will disable NEON."
         }
     ],
     "summary": [
