--- a/src/core/configure.json
+++ b/src/core/configure.json
@@ -26,7 +26,6 @@
             "webengine-extensions": "boolean",
             "webengine-webrtc": "boolean",
             "webengine-geolocation": "boolean",
-            "webengine-v8-snapshot": "boolean",
             "webengine-webchannel": "boolean",
             "webengine-kerberos": "boolean",
             "alsa": { "type": "boolean", "name": "webengine-alsa" },
@@ -113,14 +112,8 @@
             "condition": "config.unix && libs.webengine-alsa",
             "output": [ "privateFeature" ]
         },
-        "webengine-v8-snapshot": {
-            "label" : "Use v8 snapshot",
-            "purpose": "Enables the v8 snapshot, for fast v8 context creation",
-            "output": [ "privateFeature" ]
-        },
         "webengine-v8-snapshot-support": {
             "label" : "Building v8 snapshot supported",
-            "autoDetect": "features.webengine-v8-snapshot",
             "condition": "!config.unix || !features.cross_compile || arch.arm64 || tests.webengine-host-compiler",
             "output": [ "privateFeature" ]
         },
@@ -257,7 +250,7 @@
         },
         {
             "type": "warning",
-            "condition": "config.linux && features.webengine-v8-snapshot && !features.webengine-v8-snapshot-support",
+            "condition": "config.unix && config.cross_compile && !features.webengine-v8-snapshot-support",
             "message": "V8 snapshot cannot be built. Most likely, the 32-bit host compiler does not work. Please make sure you have 32-bit devel environment installed."
         }
     ],
@@ -277,7 +270,6 @@
                 "webengine-webrtc",
                 "webengine-geolocation",
                 "webengine-webchannel",
-                "webengine-v8-snapshot",
                 "webengine-kerberos",
                 "webengine-extensions",
                 {
@@ -288,7 +280,7 @@
                 {
                     "type": "feature",
                     "args": "webengine-v8-snapshot-support",
-                    "condition": "config.unix && config.cross_compile && features.webengine-v8-snapshot"
+                    "condition": "config.unix && config.cross_compile"
                 },
                 {
                     "type": "feature",
