Do not share pdf features with webengine-core
The pdfium build for qtwebengine should not use
features set for qtpdf.

Change-Id: Ibee97b774dda7e9157cadf28aa4a7a862bcba8ed
Reviewed-by: Michael Brüning <michael.bruning@qt.io>

--- a/src/pdf/configure.json
+++ b/src/pdf/configure.json
@@ -12,6 +12,7 @@
              "label": "Support V8",
              "purpose": "Enables javascript support.",
              "autoDetect": "false",
+             "condition": "!config.ios",
              "output": ["privateFeature" ]
           },
          "pdf-xfa": {
