--- a/coin/qt-installer-package-config.json
+++ b/coin/qt-installer-package-config.json
@@ -2,14 +2,14 @@
     "version": "1",
     "module-split": {
         "qtpdf": [
-            "**/include/*QtPdf*/**/*"
-            "**/lib/cmake/Qt5Gui/*"
-            "**/lib/cmake/QtPdf/*"
-            "**/lib/cmake/QtPdfWidgets/*"
-            "**/lib/pkgconfig/Qt5Pdf*"
-            "**/lib/libQt5Pdf*"
-            "**/mkspecs/modules/qt_lib_pdf*"
-            "**/plugins/**/*"
+            "**/include/*QtPdf*/**/*",
+            "**/lib/cmake/Qt5Gui/*",
+            "**/lib/cmake/QtPdf/*",
+            "**/lib/cmake/QtPdfWidgets/*",
+            "**/lib/pkgconfig/Qt5Pdf*",
+            "**/lib/libQt5Pdf*",
+            "**/mkspecs/modules/qt_lib_pdf*",
+            "**/plugins/**/*",
             "**/qml/QtQuick/**/*"
         ]
     }
