--- a/coin/qt-installer-package-config.json
+++ b/coin/qt-installer-package-config.json
@@ -4,8 +4,8 @@
         "qtpdf": [
             "**/include/*QtPdf*/**/*",
             "**/lib/cmake/Qt5Gui/*",
-            "**/lib/cmake/QtPdf/*",
-            "**/lib/cmake/QtPdfWidgets/*",
+            "**/lib/cmake/Qt5Pdf/*",
+            "**/lib/cmake/Qt5PdfWidgets/*",
             "**/lib/pkgconfig/Qt5Pdf*",
             "**/lib/libQt5Pdf*",
             "**/mkspecs/modules/qt_lib_pdf*",
