Update chromium + simplify snapshot
Simplifies our snapshoting and includes among other
files the chrome command-line preference store, which
we can use with minor adaptations.

Submodule src/3rdparty 07787da4..4ea22135:
  > Fix build for expanded sources
  > Merge "Merge remote-tracking branch 'origin/upstream-master' into 79-based" into 79-based
  > Don't trigger quad blending for opacity
  > FIXUP: Fix build with gcc 5
  > [Backport] Allow restricted clock_nanosleep in Linux sandbox

Change-Id: Ibdf7b24c0fbe920edd61f550913dca02ed67cd20
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>

--- a/src/core/qtwebengine_sources.gni
+++ b/src/core/qtwebengine_sources.gni
@@ -51,6 +51,7 @@ source_set("qtwebengine_sources") {
     "//components/nacl/common:buildflags",
     "//components/plugins/renderer/",
     "//extensions/buildflags:buildflags",
+    "//rlz/buildflags:buildflags",
     "//third_party/blink/public/mojom:mojom_platform",
   ]
 
@@ -64,6 +65,8 @@ source_set("qtwebengine_sources") {
     "//chrome/browser/media/webrtc/desktop_media_list.h",
     "//chrome/browser/net/chrome_mojo_proxy_resolver_factory.cc",
     "//chrome/browser/net/chrome_mojo_proxy_resolver_factory.h",
+    "//chrome/browser/prefs/chrome_command_line_pref_store.cc",
+    "//chrome/browser/prefs/chrome_command_line_pref_store.h",
     "//chrome/browser/profiles/profile.cc",
     "//chrome/browser/profiles/profile.h",
     "//chrome/browser/ui/webui/devtools_ui.cc",
