Add plugin placeholder when ppapi can't be loaded
Task-number: QTBUG-82012
Change-Id: I66f70f879203e8fba585caa472256dde06984a04
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/qtwebengine_sources.gni
+++ b/src/core/qtwebengine_sources.gni
@@ -49,6 +49,7 @@ source_set("qtwebengine_sources") {
     "//build:branding_buildflags",
     "//chrome/common:buildflags",
     "//components/nacl/common:buildflags",
+    "//components/plugins/renderer/",
     "//extensions/buildflags:buildflags",
     "//third_party/blink/public/mojom:mojom_platform",
   ]
