Do not build webengine on ios
Change-Id: I21391ef9f5ea9c93227c1a8a64bcd1e5a5e20ad4
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -387,7 +387,8 @@
                          && !config.static
                          && (!config.linux || features.pkg-config)
                          && (!features.xcb || features.webengine-ozone-x11)
-                         && (!config.win32 || features.webengine-winversion)",
+                         && (!config.win32 || features.webengine-winversion)
+                         && !config.ios",
             "output": [ "privateFeature" ]
         },
         "webengine-qtpdf-support": {
