--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -32,6 +32,12 @@
                 { "type": "pkgConfig", "args": "libdrm" }
             ]
         },
+        "webengine-xkbcommon": {
+            "label": "xkbcommon",
+            "sources": [
+                { "type": "pkgConfig", "args": "xkbcommon" }
+            ]
+        },
         "webengine-xcomposite": {
             "label": "xcomposite",
             "sources": [
@@ -143,10 +149,13 @@
             "test" : {
                 "main": [
                     "std::string s;",
-                    "RE2 re2(s);"
+                    "re2::FilteredRE2 fre2(1);",
+                    "int id = 0;",
+                    "fre2.Add(s, {}, &id);",
+                    "const RE2 &re2 = fre2.GetRE2(id);"
                 ]
             },
-            "headers": "re2/re2.h",
+            "headers": "re2/filtered_re2.h",
             "sources": [
                 { "type": "pkgConfig", "args": "re2" }
             ]
@@ -203,36 +212,6 @@
                 { "type": "pkgConfig", "args": "libxml-2.0 libxslt" }
             ]
         },
-        "webengine-libdrm": {
-            "label": "libdrm",
-            "sources": [
-                { "type": "pkgConfig", "args": "libdrm" }
-            ]
-        },
-        "webengine-xcomposite": {
-            "label": "xcomposite",
-            "sources": [
-                { "type": "pkgConfig", "args": "xcomposite" }
-            ]
-        },
-        "webengine-xcursor": {
-            "label": "xcursor",
-            "sources": [
-                { "type": "pkgConfig", "args": "xcursor" }
-            ]
-        },
-        "webengine-xi": {
-            "label": "xi",
-            "sources": [
-                { "type": "pkgConfig", "args": "xi" }
-            ]
-        },
-        "webengine-xtst": {
-            "label": "xtst",
-            "sources": [
-                { "type": "pkgConfig", "args": "xtst" }
-            ]
-        },
         "webengine-ffmpeg": {
             "label": "libavcodec libavformat libavutil",
             "sources": [
@@ -242,7 +221,7 @@
         "webengine-opus": {
             "label": "opus",
             "sources": [
-                { "type": "pkgConfig", "args": "opus" }
+                { "type": "pkgConfig", "args": "opus >= 1.3.1" }
             ]
         },
         "webengine-snappy": {
@@ -315,6 +294,13 @@
                     "!isEmpty(QMAKE_INCDIR_EGL): INCLUDEPATH += $$QMAKE_INCDIR_EGL",
                     "!isEmpty(QMAKE_INCDIR_OPENGL): INCLUDEPATH += $$QMAKE_INCDIR_OPENGL"
                 ]
+            }
+        },
+        "webengine-xkbcommon": {
+            "label": "system xkbcommon",
+            "type": "compile",
+            "test": {
+                "include": "xkbcommon/xkbcommon.h"
             }
         },
         "webengine-ninja": {
@@ -467,6 +453,11 @@
             "condition": "libs.webengine-libdrm",
             "output": [ "privateFeature" ]
         },
+        "webengine-system-xkbcommon": {
+            "label": "xkbcommon",
+            "condition": "libs.webengine-xkbcommon && tests.webengine-xkbcommon",
+            "output": [ "privateFeature" ]
+        },
         "webengine-system-xcomposite": {
             "label": "xcomposite",
             "condition": "libs.webengine-xcomposite",
@@ -540,31 +531,6 @@
                 "privateFeature",
                 { "type": "varAssign", "name": "QMAKE_JUMBO_MERGE_LIMIT", "value": "tests.webengine-jumbo-build.merge_limit" }
             ]
-        },
-        "webengine-system-libdrm": {
-            "label": "libdrm",
-            "condition": "libs.webengine-libdrm",
-            "output": [ "privateFeature" ]
-        },
-        "webengine-system-xcomposite": {
-            "label": "xcomposite",
-            "condition": "libs.webengine-xcomposite",
-            "output": [ "privateFeature" ]
-        },
-        "webengine-system-xcursor": {
-            "label": "xcursor",
-            "condition": "libs.webengine-xcursor",
-            "output": [ "privateFeature" ]
-        },
-        "webengine-system-xi": {
-            "label": "xi",
-            "condition": "libs.webengine-xi",
-            "output": [ "privateFeature" ]
-        },
-        "webengine-system-xtst": {
-            "label": "xtst",
-            "condition": "libs.webengine-xtst",
-            "output": [ "privateFeature" ]
         },
         "webengine-system-harfbuzz": {
             "label": "harfbuzz",
@@ -786,7 +752,8 @@
                         "webengine-system-png",
                         "webengine-system-jpeg",
                         "webengine-system-harfbuzz",
-                        "webengine-system-freetype"
+                        "webengine-system-freetype",
+                        "webengine-system-xkbcommon"
                      ]
                  }
              ]
