Leave designer plugin in qtwebengine package
Fixes: QTBUG-82527
Change-Id: I827239a60f5f2db43ca69eb8a9fd8c529a21e4ee
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/coin/qt-installer-package-config.json
+++ b/coin/qt-installer-package-config.json
@@ -9,7 +9,7 @@
             "**/lib/pkgconfig/Qt5Pdf*",
             "**/lib/libQt5Pdf*",
             "**/mkspecs/modules/qt_lib_pdf*",
-            "**/plugins/**/*",
+            "**/plugins/imageformats/*",
             "**/qml/QtQuick/**/*"
         ]
     }
