--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -350,19 +350,26 @@
         "webengine-core-support": {
             "label": "Support Qt WebEngine Core",
             "condition": "module.gui
-                         && features.webengine-python2
+                         && features.webengine-submodule
+                         && features.webengine-nowhitespace
+                         && !features.webengine-no-platform-support
+                         && features.webengine-arch-support
                          && features.webengine-gperf
                          && features.webengine-bison
                          && features.webengine-flex
-                         && features.webengine-submodule
-                         && features.webengine-nowhitespace
-                         && features.webengine-arch-support
-                         && !features.webengine-no-platform-support
+                         && features.webengine-python2
                          && !config.static
+                         && !config.ios
                          && (!config.linux || features.pkg-config)
-                         && (!features.xcb || features.webengine-ozone-x11)
-                         && (!config.win32 || features.webengine-winversion)
-                         && !config.ios",
+                         && (!config.linux || features.webengine-host-pkg-config)
+                         && (!config.linux || features.webengine-system-glibc)
+                         && (!config.linux || features.webengine-system-khr)
+                         && (!config.linux || features.webengine-system-nss)
+                         && (!config.linux || features.webengine-system-dbus)
+                         && (!config.linux || features.webengine-system-fontconfig)
+                         && (!config.linux || !features.pkg-config || !features.xcb || features.webengine-ozone-x11)
+                         && (!config.win32 || features.webengine-win-compiler64)
+                         && (!config.win32 || features.webengine-winversion)",
             "output": [ "privateFeature" ]
         },
         "webengine-qtpdf-support": {
